force-app/main/default/objects/ssot__Tax__dlm/fields/ssot__rel_1697761219397_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761219397_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax_TaxAddressStateProvinceCodeId_ma_rel</label>
    <referenceTo>ssot__StateProvince__dlm</referenceTo>
    <relationshipLabel>Tax_TaxAddressStateProvinceCodeId_ma_rel</relationshipLabel>
    <relationshipName>rel_1697761219397_end</relationshipName>
    <type>Lookup</type>
</CustomField>