force-app/main/default/objects/ssot__Tax__dlm/fields/ssot__rel_1697761219861_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761219861_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax_SalesOrderProductTaxId_map_Sales_rel</label>
    <referenceTo>ssot__SalesOrderProductTax__dlm</referenceTo>
    <relationshipLabel>Tax_SalesOrderProductTaxId_map_Sales_rel</relationshipLabel>
    <relationshipName>rel_1697761219861_end</relationshipName>
    <type>Lookup</type>
</CustomField>