force-app/main/default/objects/ssot__Tax__dlm/fields/ssot__SalesOrderProductPriceAdjTaxId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderProductPriceAdjTaxId__c</fullName>
    <label>Sales Order Product Price Adj Tax</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderProductPriceAdjTaxId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>