force-app/main/default/objects/ssot__Tax__dlm/fields/ssot__SalesOrderTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderTaxAmount__c</fullName>
    <label>Sales Order Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>