force-app/main/default/objects/ssot__Tax__dlm/fields/ssot__SalesOrderTaxType__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderTaxType__c</fullName>
    <label>Sales Order Tax Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderTaxType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>