force-app/main/default/objects/ssot__Tax__dlm/fields/ssot__TaxAddressCityName__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxAddressCityName__c</fullName>
    <label>Tax Address City Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxAddressCityName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>