force-app/main/default/objects/ssot__Tax__dlm/fields/ssot__TaxAddressStreet2Text__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxAddressStreet2Text__c</fullName>
    <label>Tax Address Street2</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxAddressStreet2Text</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>